@@ -1,5 +1,17 @@
 2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by Juergen Weigert:
+	bug #22720: avrdude-5.5 ignores buff settings in avrdude.conf
+	(Note that the actual bug the subject is about has been fixed
+	long ago.)
+	* update.c (do_op): fix a diagnostic message
+	* pgm.h: add exit_datahigh field
+	* par.c: set and act upon the exit_datahigh field
+	* avrdude.1: document the new -E options
+	* doc/avrdude.texi: (Ditto.)
+
+2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	bug #33811: Parallel make fails
 	* Makefile.am (BUILT_SOURCES): Add this macro.
 
